-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta3
-
None
-
MS windows11, MSVC 2022,
-
-
4b3072873 (dev), a5b940414 (6.8)
In Qt 6.8.0 Beta3, when using the Graphs: 2D component, the clicked signal of the QBarSeries is not being emitted as expected. This issue prevents UI elements from being updated when the user clicks on a bar in the series.
Steps to Reproduce:
- Create a simple Qt Quick application using Qt 6.8.0 Beta3.
- Define a BarSeries with a set of BarSet items.
- Implement the onClicked handler for the BarSeries.
- Run the application and click on any bar within the series.
Expected Result:
The clicked signal should be emitted when a bar in the BarSeries is clicked, and the corresponding slot (e.g., onClicked) should be executed, updating the UI as defined in the handler.
Actual Result:
The clicked signal is not emitted when clicking on a bar. As a result, the UI does not update, and no console output is generated from within the onClicked handler.