API: Remove unused input handling signals from QBarSeries

These are not functional yet, so remove them for now and design &
implement proper individual series input handling for 6.9.

Task-number: QTBUG-128251
Change-Id: Ibe2a80fcb9169b525347a59f7142ee108d0706e9
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Owais Akhtar <owais.akhtar@qt.io>
(cherry picked from commit 4b30728738763f37a8bdcec3134e97dfe771a57a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>